fix input on mobile screen

--- a/src/components/contact/contact.module.scss
+++ b/src/components/contact/contact.module.scss
@@ -48,6 +48,7 @@
     }
 
     .form {
+      min-width: 200px;
       @media (min-width: 700px) {
         max-width: 1100px;
         margin: auto;
@@ -87,6 +88,7 @@
       input[type="text"],
       input[type="email"],
       textarea {
+        width: 100%;
         padding: 0 1rem;
       }
       @media (min-width: 700px) {
@@ -123,7 +125,6 @@
         color: rgba(0, 0, 0, 0.5098039216);
         cursor: pointer;
         font-size: 120%;
-
         width: 60%;
         padding: 0 1rem;
         @media (min-width: 700px) {
