--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -27,7 +27,6 @@
 }
 
 body {
-  min-width: 400px;
   font-family: "jost", sans-serif;
 }
 
